[gd_scene load_steps=16 format=3 uid="uid://c0ytsq1nwm6qk"]

[ext_resource type="Script" path="res://Scripts/Tag/Tag_AI.gd" id="1_sjrgg"]
[ext_resource type="PackedScene" uid="uid://cvfyfp77fw3yf" path="res://Assets/Tag/RoseBud.glb" id="2_rc0b5"]
[ext_resource type="Shader" uid="uid://7gcbwkd3kxd3" path="res://Assets/CelShader.tres" id="3_31y6b"]
[ext_resource type="Texture2D" uid="uid://qn0c3w4ard63" path="res://Assets/Tag/RoseBud_AO Map.png" id="4_g2h73"]
[ext_resource type="Texture2D" uid="uid://dn8m7tq4fpp57" path="res://Assets/Tag/RoseBudColor.png" id="5_f8w27"]
[ext_resource type="Texture2D" uid="uid://cmh2s63n5dkar" path="res://Assets/Materials/TribandColor.tres" id="6_2slko"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lkpu6"]
size = Vector3(1.42, 2.53, 1.54)

[sub_resource type="Gradient" id="Gradient_k6egm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0201307, 0.0028826, 0.0699344, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5p858"]
gradient = SubResource("Gradient_k6egm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lqwih"]
render_priority = 0
shader = ExtResource("3_31y6b")
shader_parameter/scaling = Vector2(1, 1)
shader_parameter/Roughness_Strength = 0.4
shader_parameter/Shadow_Hardness_Min = 0.5
shader_parameter/Shadow_Hardness_Max = 1.0
shader_parameter/Color_Map = ExtResource("5_f8w27")
shader_parameter/hue = SubResource("GradientTexture1D_5p858")
shader_parameter/AO_Map = ExtResource("4_g2h73")
shader_parameter/Light_Map = ExtResource("6_2slko")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2phkw"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_26117"]
animation = &"Run_001"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_qaxt1"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_62qhh"]
graph_offset = Vector2(-308.16, 50.88)
nodes/Animation/node = SubResource("AnimationNodeAnimation_26117")
nodes/Animation/position = Vector2(-151.44, 100)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_2phkw")
"nodes/Animation 2/position" = Vector2(-160, 220)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_qaxt1")
nodes/Blend2/position = Vector2(260, 100)
nodes/output/position = Vector2(540, 110)
node_connections = [&"Blend2", 0, &"Animation", &"Blend2", 1, &"Animation 2", &"output", 0, &"Blend2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dtiad"]
size = Vector3(1.585, 2.307, 1.611)

[node name="TagAi" type="CharacterBody3D"]
script = ExtResource("1_sjrgg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23643, 0)
shape = SubResource("BoxShape3D_lkpu6")

[node name="RoseBud" parent="CollisionShape3D" instance=ExtResource("2_rc0b5")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 2.08165e-12, 0.382956, -0.113058)

[node name="Skeleton3D" parent="CollisionShape3D/RoseBud/Armature" index="0"]
bones/0/position = Vector3(0, 0.0869025, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/4/rotation = Quaternion(-0.00367412, 0.000168955, 0.00914254, 0.999951)
bones/4/scale = Vector3(1.06531, 0.881159, 1.06531)
bones/5/rotation = Quaternion(0.236982, 0.0626373, 0.114022, 0.962764)
bones/6/rotation = Quaternion(0.288696, 0.044725, 0.257011, 0.921195)
bones/7/rotation = Quaternion(0.210727, 0.145598, 0.114384, 0.95985)
bones/8/rotation = Quaternion(-0.245447, -0.0308339, -0.141735, 0.958497)
bones/9/rotation = Quaternion(-0.308423, -0.0233826, -0.0440936, 0.949939)
bones/10/rotation = Quaternion(-0.347346, -0.00496102, -0.112107, 0.930999)
bones/11/rotation = Quaternion(0.103995, 0.00115131, -0.273139, 0.956336)
bones/12/rotation = Quaternion(0.224907, -0.0302256, -0.315487, 0.921396)
bones/13/rotation = Quaternion(0.100539, -0.0430943, -0.238554, 0.964949)
bones/14/rotation = Quaternion(-0.110866, -0.0509454, 0.229902, 0.965535)
bones/15/rotation = Quaternion(-0.208633, -0.0300706, 0.358768, 0.909315)
bones/16/rotation = Quaternion(0.0720543, -0.122463, 0.155929, 0.977495)
bones/21/rotation = Quaternion(0.16656, -0.317113, -0.532273, 0.767061)
bones/22/rotation = Quaternion(-0.0803294, 0.33883, 0.66906, -0.656583)
bones/23/rotation = Quaternion(-0.0727815, 0.00205447, 0.129243, 0.988936)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(-0.260302, 1.36675, -0.145874)
bones/24/rotation = Quaternion(0.437825, 0.218321, -0.0823195, 0.868256)
bones/25/rotation = Quaternion(0.0316003, -0.0361527, 0.239577, 0.969689)
bones/25/scale = Vector3(1.00995, 0.982115, 1.00995)
bones/26/rotation = Quaternion(-0.313281, 0.068658, 0.426952, 0.84549)
bones/26/scale = Vector3(0.852034, 1.38456, 0.852033)
bones/27/position = Vector3(-0.779176, 2.28321, 0.638928)
bones/27/rotation = Quaternion(0.253851, 0.0160994, 0.00422588, 0.9671)
bones/28/position = Vector3(-0.223623, 2.23749, 1.26779)
bones/28/rotation = Quaternion(0.575189, 0.173455, 0.124045, 0.789736)
bones/29/rotation = Quaternion(-0.256559, -0.00717464, -0.237026, 0.936987)
bones/29/scale = Vector3(0.681265, 2.15478, 0.681265)
bones/30/rotation = Quaternion(-0.119278, -0.0980803, -0.0899788, 0.983899)
bones/30/scale = Vector3(0.699183, 2.04564, 0.699183)
bones/31/position = Vector3(0.00712639, 3.17988, 1.98642)
bones/31/rotation = Quaternion(0.494083, 0.182865, 0.107154, 0.843185)
bones/32/position = Vector3(-0.151503, 2.70585, 2.02937)
bones/32/rotation = Quaternion(0.167969, 0.165142, 0.118507, 0.964609)
bones/33/rotation = Quaternion(-0.354569, -0.227474, 0.398107, 0.814891)
bones/34/rotation = Quaternion(-0.163329, -0.257998, 0.578931, 0.756042)
bones/35/rotation = Quaternion(-0.143162, 0.00901123, -0.193124, 0.970632)
bones/35/scale = Vector3(0.836614, 1.4294, 0.836614)
bones/36/position = Vector3(0.531465, 1.6661, -0.401794)
bones/36/rotation = Quaternion(-0.454233, 0.395533, -0.238226, 0.761889)
bones/37/rotation = Quaternion(0.473777, 0.108832, 0.16465, 0.858243)
bones/37/scale = Vector3(1.13755, 0.781913, 1.13755)
bones/38/rotation = Quaternion(0.746515, -0.301691, -0.267462, 0.529304)
bones/38/scale = Vector3(0.802499, 1.56618, 0.8025)
bones/39/position = Vector3(1.07424, 2.64738, -0.937053)
bones/39/rotation = Quaternion(0.646479, 0.520154, 0.409772, -0.378935)
bones/40/rotation = Quaternion(0.423209, -0.0733261, -0.559993, 0.708466)
bones/40/scale = Vector3(1.30025, 1.24485, 1.30025)
bones/41/rotation = Quaternion(-0.10562, 0.358831, 0.919579, -0.120248)
bones/41/scale = Vector3(0.64586, 2.53826, 0.645861)
bones/42/position = Vector3(1.11517, 3.1759, -0.706835)
bones/42/rotation = Quaternion(-0.0703633, 0.0144817, -0.0748958, 0.9946)
bones/43/position = Vector3(1.23563, 2.41909, -0.241855)
bones/43/rotation = Quaternion(-0.19516, 0.287407, -0.393058, 0.851361)
bones/44/position = Vector3(0.628386, 3.31302, -0.829083)
bones/44/rotation = Quaternion(-0.292653, 0.0317894, 0.360448, 0.88511)
bones/45/position = Vector3(-0.0509324, 6.21315, -0.0204582)
bones/46/position = Vector3(-0.610779, 3.79643, 1.43108)
bones/46/rotation = Quaternion(0.787491, 2.18729e-15, 0.616326, -3.78446e-08)
bones/47/position = Vector3(0.741019, 3.81247, -1.56974)
bones/47/rotation = Quaternion(0.946261, 3.5687e-16, 0.323403, -3.14948e-08)
bones/48/position = Vector3(1.48951, 3.77898, 0.764447)
bones/48/rotation = Quaternion(-0.43926, 3.31741e-08, 0.89836, -5.8952e-16)
bones/49/position = Vector3(-1.44038, 3.82986, -0.780353)
bones/49/rotation = Quaternion(-0.269547, 3.09478e-08, 0.962987, 4.29454e-16)
bones/50/position = Vector3(-0.406057, 1.07711, -0.746373)
bones/50/rotation = Quaternion(-0.199218, 0.66363, 0.695542, -0.190078)
bones/51/position = Vector3(0.435766, 1.07711, 0.687186)
bones/51/rotation = Quaternion(-0.199218, 0.66363, 0.695542, -0.190078)

[node name="Sphere_029" parent="CollisionShape3D/RoseBud/Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_lqwih")

[node name="AnimationTree" type="AnimationTree" parent="CollisionShape3D/RoseBud"]
tree_root = SubResource("AnimationNodeBlendTree_62qhh")
anim_player = NodePath("../AnimationPlayer")
parameters/Blend2/blend_amount = 0.0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11764, 0)
collision_layer = 3
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.477209, 2.08165e-12)
shape = SubResource("BoxShape3D_dtiad")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="CollisionShape3D/RoseBud"]
